add toolbar, main view, outlets and actions

--- a/PhotoPickerDemo/Base.lproj/Main.storyboard
+++ b/PhotoPickerDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,53 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PhotoPickerDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nfk-4H-RcV">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="pId-Ek-PGT"/>
+                                    <barButtonItem title="Take Photo" id="KeE-L2-4aS">
+                                        <connections>
+                                            <action selector="takePhoto:" destination="BYZ-38-t0r" id="Tnr-7C-6n1"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="Hk4-Ka-l3d"/>
+                                    <barButtonItem title="Pick Photo" id="MUx-68-sq7">
+                                        <connections>
+                                            <action selector="pickPhoto:" destination="BYZ-38-t0r" id="2w9-yV-w5H"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="fue-gC-3XH"/>
+                                </items>
+                            </toolbar>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Jz-qf-r5G" userLabel="Image View">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="5Jz-qf-r5G" secondAttribute="bottom" constant="44" id="023-F6-ABW"/>
+                            <constraint firstItem="5Jz-qf-r5G" firstAttribute="trailing" secondItem="Nfk-4H-RcV" secondAttribute="trailing" id="3Me-Zm-1fc"/>
+                            <constraint firstItem="5Jz-qf-r5G" firstAttribute="leading" secondItem="Nfk-4H-RcV" secondAttribute="leading" id="MVB-fI-Ivq"/>
+                            <constraint firstItem="5Jz-qf-r5G" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="b9f-fb-Jhw"/>
+                            <constraint firstItem="5Jz-qf-r5G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="d82-gr-EqY"/>
+                            <constraint firstItem="5Jz-qf-r5G" firstAttribute="bottom" secondItem="Nfk-4H-RcV" secondAttribute="top" id="fso-m3-BIT"/>
+                            <constraint firstAttribute="trailing" secondItem="5Jz-qf-r5G" secondAttribute="trailing" id="tzW-Il-mE4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="5Jz-qf-r5G" id="Cpf-MD-bfl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="133.5832083958021"/>
         </scene>
     </scenes>
 </document>
